<resources>
    <string name="app_name">WeatherMVVM</string>
    <string name="app_title">My Weather Is It</string>
    <string name="content_description_title">App title</string>

    <!-- Bottom Action Bar -->
    <string name="favorite_bottom_bar">Favorite</string>
    <string name="home_bottom_bar">Home</string>
    <string name="settings_bottom_bar">Settings</string>
    <!-- Content Descriptor -->
    <string name="content_description_favorite_bottom_bar">Favorite Option Button</string>
    <string name="content_description_home_bottom_bar">Home Option Button</string>
    <string name="content_description_settings_bottom_bar">Settings option Button</string>
    <string name="content_description_search_bar">Search your favorite city</string>
    <string name="content_description_image_icon">Icon for weather in favorite cities</string>
    <string name="content_description_delete_icon">Icon for delete favorite city</string>

    <!-- UI strings -->
    <string name="button_details">More Details…</string>
    <string name="content_description_weather_image_icon">Icon of weather</string>
    <!-- HomeFragment strings -->
    <string name="city_name">City Name</string>
    <string name="date">Monday</string>
    <string name="temperature">45 c</string>
    <!-- Recycler View -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- EditText View -->
    <string name="et_hint">Search yoor favorite city</string>

    <!--  Navigation  -->
    <string name="name_fragment_details">Details</string>
    <string name="name_fragment_favorite">Favorite Cities</string>
    <string name="name_fragment_settings">Settings</string>

    <!-- Error API -->
    <string name="city_error">ERROR!! %1$s</string>

</resources>